# kazamori

./: .gitignore  CMakeLists.txt  README.md  build.bat  rebuild.bat
app/: CMakeLists.txt
app/src/: main.c  max_pooling_test.c
core/: CmakeLists.txt
core/include/: kazamori.h
core/src/: convolution.c  convolution.h  data_set.c  data_set.h  full_connected.c  full_connected.h  image_set.c  image_set.h  library.c  library.h  max_pooling.c  max_pooling.h  nn.c  nn.h
print/: CMakeLists.txt
print/include/: print.h
print/src/: print_convolution.c  print_data_set.c  print_full_connected.c  print_image_set.c  print_max_pooling.c  tab.h
svm/: CMakeLists.txt
svm/src/: main.c
